Some fix 1 2 3 block

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                         <thead>
                             <tr>
                                 <th><small>ЗАЇЗДИ</small><br/>ALIVE CAMP</th>
-                                <th>ДАТА</th>
-                                <th>ВІК</th>
+                                <th><br/>ДАТА</th>
+                                <th><br/>ВІК</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -181,11 +181,11 @@
                 </div>
                 <div class="col-lg-3">
                     <img src="img/icon_3.png">
-                    <p>Мальовниче озеро<br/>Свіже повітря<br/>Відпочинкова зона<br/>Вогонь, гітара, зорі</p>
+                    <p>Турніри і квести<br/>Розвиваючі, настільні ігри<br/>Уроки гітари<br/>Спортивні ігри</p>
                 </div>
                 <div class="col-lg-3">
                     <img src="img/icon_4.png">
-                    <p>Мальовниче озеро<br/>Свіже повітря<br/>Відпочинкова зона<br/>Вогонь, гітара, зорі</p>
+                    <p>Душевні бесіди<br/>Натхненні вечори<br/>Курс про стосунки<br/>Кінотеатр просто неба</p>
                 </div>
             </div>
         </div>
@@ -193,7 +193,7 @@
             <div class="row centered">
                 <div class="col-lg-8 col-lg-offset-2">
                     <h1>ЗРУЧНОСТІ</h1>
-                    <p>Для того, щоб зробити ваше життя у наметовому містечку Alive Camp ще кращим, ми оснащуємо територію різноманітними зручностями:</p>
+                    <p>Для того, щоб зробити ваше життя у наметовому містечку Alive Camp ще кращим,<br /> ми оснащуємо територію різноманітними зручностями:</p>
                 </div>
             </div>
         </div>
@@ -206,10 +206,10 @@
                     <p>5. Лавочки<br/>6. Постійна точка<br/>для зарядки<br/>ваших пристроїв</p>
                 </div>
                 <div class="col-sm-2 col-md-3">
-                    <p>7. Накриття від дощу<br/>8. Фото-зона<br/>9. Relax-зона<br/>відпочинку</p>
+                    <p>7. Накриття від дощу<br/>8. Фото-зона<br/>9. Гойдалки <br/> 10. Міні-кафе</p>
                 </div>
                 <div class="col-sm-2 col-md-3">
-                    <p>10. Міні-кафе<br/>11. Тенісний стіл<br/>12. Гойдалки</p>
+                    <p>11. Relax-зона<br/>12. Тенісний стіл<br/>13. Освітлювальні <br> елементи локації</p>
                 </div>
             </div>
         </div>
