Add icon check and some fix

--- a/index.html
+++ b/index.html
@@ -200,16 +200,16 @@
         <div class="container centered">
             <div class="row centered col-lg-offset-1 block3_1">
                 <div class="col-sm-3 col-md-3">
-                    <p>1. Душі<br/>2. Туалети<br/>3. Умивальники<br/>4. Столи</p>
+                    <p><i class="fa fa-check" aria-hidden="true"></i> Душі<br/><i class="fa fa-check" aria-hidden="true"></i> Туалети<br/><i class="fa fa-check" aria-hidden="true"></i> Умивальники<br/><i class="fa fa-check" aria-hidden="true"></i> Столи</p>
                 </div>
                 <div class="col-sm-2 col-md-3">
-                    <p>5. Лавочки<br/>6. Постійна точка<br/>для зарядки<br/>ваших пристроїв</p>
+                    <p><i class="fa fa-check" aria-hidden="true"></i> Лавочки<br/><i class="fa fa-check" aria-hidden="true"></i> Постійна точка<br/>&emsp; для зарядки<br/> &emsp; ваших пристроїв</p>
                 </div>
                 <div class="col-sm-2 col-md-3">
-                    <p>7. Накриття від дощу<br/>8. Фото-зона<br/>9. Гойдалки <br/> 10. Міні-кафе</p>
+                    <p><i class="fa fa-check" aria-hidden="true"></i> Накриття від дощу<br/><i class="fa fa-check" aria-hidden="true"></i> Фото-зона<br/><i class="fa fa-check" aria-hidden="true"></i> Гойдалки <br/> <i class="fa fa-check" aria-hidden="true"></i> Міні-кафе</p>
                 </div>
                 <div class="col-sm-2 col-md-3">
-                    <p>11. Relax-зона<br/>12. Тенісний стіл<br/>13. Освітлювальні <br> елементи локації</p>
+                    <p><i class="fa fa-check" aria-hidden="true"></i> Relax-зона<br/><i class="fa fa-check" aria-hidden="true"></i> Тенісний стіл<br/><i class="fa fa-check" aria-hidden="true"></i> Освітлювальні <br> &emsp; елементи локації</p>
                 </div>
             </div>
         </div>
