--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <div class="col-lg-3 col-lg-offset-3">
                     <a href="#myModal" data-toggle="modal">
                         <button type="button" class="btn btn-default btn-lg button-one centered" aria-label="Left Align">
-                            <span class="glyphicon glyphicon-play-circle but-icon" aria-hidden="true"></span>
+                            <i class="fa fa-play-circle" aria-hidden="true"></i>
                             <span class="promo">ПРОМО</span>
                         </button>
                     </a>
