--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
                     <li><a href="#pro_tabir_anchor">ПРО ТАБІР</a>
                     <li><a href="#rozporyadok_anchor">РОЗПОРЯДОК ДНЯ</a>
                     <li><a href="#aktyvnosti_anchor">АКТИВНОСТІ</a>
-                    <li><a href="#reg__section" rel="nofollow">ЦІНИ ТА РЕЄСТРАЦІЯ</a>
+                    <li class="bordergold"><a href="#reg__section" rel="nofollow">ЦІНИ ТА РЕЄСТРАЦІЯ</a>
                     <li><a href="#photo__section" rel="nofollow">ФОТО</a>
                     <li><a href="#contact__section" rel="nofollow">КОНТАКТИ</a>
                 </ul>
-            </div>
-            </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="second"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>+38 097 220 78 30; +38 063 066 02 93</a></li>
+                </ul>
         </div>
     </nav>
     <a name="golovna_anchor" class="anchor"></a>
