add link to form

--- a/index.html
+++ b/index.html
@@ -471,26 +471,26 @@
                 <span id="modal_close">X</span>
                 <div class="row centered">
                     <div class="col-md-10 col-md-offset-1">
-                        <form action="mailto:info@alivecamp.com.ua" method="post" enctype="text/plain">
+                        <form action="https://docs.google.com/forms/d/e/1FAIpQLScKi0W3SpbxiwvxmOP291a0wdJnLEQaXp6eIK3Q22G5HW87Cw/formResponse" method="post" enctype="text/plain">
                             <span class="email__modal-text">
                                 Прізвище:
                             </span> </br>
-                            <input type="text" name="lastname"></br>
+                            <input type="text" name="entry.935987859></br>
 
                             <span class="email__modal-text">
                                 Ім'я:
                             </span></br>
-                            <input type="text" name="firstname"></br>
+                            <input type="text" name="entry.1131368883"></br>
 
                             <span class="email__modal-text">
                                 Телефон:
                             </span></br>
-                            <input type="tel" name="phone" maxlength="13" pattern="+38[0-9]{3}-[0-9]{7}" placeholder="+380"></br>
+                            <input type="tel" name="entry.1263995965" maxlength="13" pattern="+38[0-9]{3}-[0-9]{7}" placeholder="+380"></br>
 
                             <span class="email__modal-text">
                                 E-mail:
                             </span></br>
-                            <input type="email" name="email"></br>
+                            <input type="email" name="entry.2007694099"></br>
 
                             <span class="email__modal-text">
                                 Вибір заїзду:
