--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </button>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav nabar-left">
                     <li><a href="#golovna_anchor">ГОЛОВНА</a>
                     <li><a href="#pro_tabir_anchor">ПРО ТАБІР</a>
                     <li><a href="#rozporyadok_anchor">РОЗПОРЯДОК ДНЯ</a>
@@ -30,6 +30,7 @@
                     <li><a href="#reg__section" rel="nofollow">ЦІНИ ТА РЕЄСТРАЦІЯ</a>
                     <li><a href="#photo__section" rel="nofollow">ФОТО</a>
                     <li><a href="#contact__section" rel="nofollow">КОНТАКТИ</a>
+
                 </ul>
             </div>
             </div>
@@ -219,7 +220,6 @@
 		<div id="aktyvnosti">
       <div class='dotted'>
           <div class="row centered aktyv">
-
   						<h1 class="aktyv">АКТИВНОСТІ</h1>
   							<h2 class="aktyv-underline">ДЛЯ ТІЛА</h2>
   							<div class="col-xs-12 col-sm-12">
@@ -297,19 +297,19 @@
 						  	<div class="col-xs-12 col-sm-12 rin">
 								 	<div class="circle col-xs-12 col-sm-2 col-sm-offset-2">
 										<img src="img\ico_round_gi.png" alt="УРОКИ ГРИ НА ГІТАРІ" class="image-tam">
-										<span class="text_center pos vol">УРОКИ ГРИ НА ГІТАРІ</span>
+										<span class="text_center posreg gitar">УРОКИ ГРИ НА ГІТАРІ</span>
 									</div>
 									<div class="circle col-xs-12 col-sm-2 ">
 										<img src="img\ico_round_re.png" alt="КУРС ПО СТОСУНКАХ" class="image-tam">
-										<span class="text_center pos re">КУРС ПО СТОСУНКАХ</span>
+										<span class="text_center posreg re">КУРС ПРО СТОСУНКАХ</span>
 									</div>
 									<div class="circle col-xs-12 col-sm-2">
 										<img src="img\enсlab.png" alt="ENGLISH CLUB" class="image-tam">
-										<span class="text_center pos enсlab">ENGLISH CLUB</span>
+										<span class="text_center posreg engli">ENGLISH CLUB</span>
 									</div>
 									<div class="circle col-xs-12 col-sm-2 ">
 										<img src="img\ico_round_po.png" alt="ПОЕТИЧНІ ВИСТУПИ" class="image-tam">
-										<span class="text_center pos po">ПОЕТИЧНІ ВИСТУПИ</span>
+										<span class="text_center posreg po">ПОЕТИЧНІ ВИСТУПИ</span>
 									</div>
 							  </div>
 						</div>
@@ -403,8 +403,8 @@
                     ПЕРЕЛІК НЕОБХІДНИХ РЕЧЕЙ
                 </a>
                 <p class="reg__additional-info">
-                    * У вартість входить: оренда локації, харчування, організаційні витрати, подарунки (доїзд/від'їзд не включений в оплату); </br>
-                    ** Реєстрації вважається дійсною лише після виконання всіх трьох кроків, які подані вище;</br>
+                    *  Реєстрації вважається дійсною лише після виконання всіх трьох кроків, які подані вище;</br>
+                    ** У вартість входить: оренда локації, харчування, організаційні витрати, подарунки (доїзд/від'їзд не включений в оплату);</br>
                     *** Після реєстрації, протягом трьох днів, на вашу електронну скриньку прийде повідомлення про те, що ви успішно зареєструвались;</br>
                     **** У разі відмови від участі в таборі, ми можемо повернути вам лише половину коштів. Щоб повернути усі кошти, необхідно знайти на своє місце іншу особу.
                 </p>
@@ -421,7 +421,7 @@
                             </br>
                             <span class="modal__description">Необхідно переказати відповідну суму коштів на картку ПриватБанку:</span>
                             </br>
-                            <span class="modal__number">5168 7556 3310 3490 - </br> Андрушків Олег Юрійович</span>
+                            <span class="modal__number">5168 7556 3310 3490 - </br> Андрушків Андрій Юрійович</span>
                         </div>
                     </div>
                 </div>
