--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
                             <span class="email__modal-text">
                                 Прізвище:
                             </span> </br>
-                            <input type="text" name="entry.935987859></br>
+                            <input type="text" name="entry.935987859"></br>
 
                             <span class="email__modal-text">
                                 Ім'я:
