--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </button>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav nabar-left">
+                <ul class="nav navbar-nav nabar">
                     <li><a href="#golovna_anchor">ГОЛОВНА</a>
                     <li><a href="#pro_tabir_anchor">ПРО ТАБІР</a>
                     <li><a href="#rozporyadok_anchor">РОЗПОРЯДОК ДНЯ</a>
@@ -30,10 +30,8 @@
                     <li><a href="#reg__section" rel="nofollow">ЦІНИ ТА РЕЄСТРАЦІЯ</a>
                     <li><a href="#photo__section" rel="nofollow">ФОТО</a>
                     <li><a href="#contact__section" rel="nofollow">КОНТАКТИ</a>
-
                 </ul>
-            </div>
-            </div>
+            </div>            
         </div>
     </nav>
     <a name="golovna_anchor" class="anchor"></a>
@@ -195,7 +193,7 @@
 				<div class="brd">
 					<h2 class="metro">Орієнтовний розпорядок дня</h2>
 					<div class="col-sm-5 col-sm-offset-1">
-            <p><font color="gold">7.45</font> - Підйом</p>
+            <p><font color="gold">07.45</font> - Підйом</p>
 						<p><font color="gold">08.00</font> - Зарядка</p>
 						<p><font color="gold">08.15</font> - Сніданок</p>
 						<p><font color="gold">09.30</font> - Активності для тіла</p>
@@ -219,9 +217,9 @@
     <a name="aktyvnosti_anchor" class="anchor"></a>
 		<div id="aktyvnosti">
       <div class='dotted'>
-          <div class="row centered aktyv">
-  						<h1 class="aktyv">АКТИВНОСТІ</h1>
-  							<h2 class="aktyv-underline">ДЛЯ ТІЛА</h2>
+          <div class="row centered">
+  						<h1 style="color: white; font-weight: bold; letter-spacing: 3px;">АКТИВНОСТІ</h1>
+  						<h2 class="aktyv-underline">ДЛЯ ТІЛА</h2>
   							<div class="col-xs-12 col-sm-12">
   								<div class="circle col-xs-12 col-sm-2 col-sm-offset-1">
   									<img src="img\ico_round_vol.png" alt="футбол" class="image-tam">
