--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
                             </tr>
                             <tr class="table-backdown">
                                 <td><span>4</span></td>
-                                <td>З 16 ПО 24 ЛИПНЯ <strong>LITE</strong><sup>&#9913</sup></td>
-                                <td>ВІК УЧАСНИКІВ<br/>НЕОМЕЖЕНИЙ</td>
+                                <td>З 16 ПО 24 ЛИПНЯ <strong>LITE</strong><span>&#9913</span></td>
+                                <td>ВІК УЧАСНИКІВ<br/>НЕОБМЕЖЕНИЙ</td>
                           </tr>
                           <tr>
                             <td><span>5</span></td>
-                            <td>З 24 ПО 1 СЕРПНЯ</td>
+                            <td>З 24 ЛИПНЯ ПО 1 СЕРПНЯ</td>
                             <td>16-26 РОКІВ</td>
                           </tr>
                         </tbody>
