--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                     <span class="step__description">ЗАПОВНІТЬ </br> АНКЕТУ</span>
                 </div>
                 <button class="reg__button button_hover" type="submit">
-                    <a href="" id="go_email">ЗАПОВНИТИ</a>
+                    <a href="payment.html" id="">ЗАПОВНИТИ</a>
                 </button>
             </div>
             <div class="col-md-1">
@@ -489,78 +489,6 @@
                             </br>
                             <span class="modal__number">5168 7556 3310 3490 - </br> Андрушків Андрій Юрійович</span>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- email modal window -->
-        <div class="email__modal">
-            <div id="email_modal">
-                <span id="modal_close">X</span>
-                <div class="row centered">
-                    <!-- <div class="col-md-8 col-md-offset-2">
-                        <form action="mailto:info@alivecamp.com.ua" method="post" enctype="text/plain">
-                            <span class="email__modal-text bold"> -->
-                    <div class="col-md-10 col-md-offset-1">
-                        <form action="https://docs.google.com/forms/d/e/1FAIpQLScKi0W3SpbxiwvxmOP291a0wdJnLEQaXp6eIK3Q22G5HW87Cw/formResponse" method="post" enctype="text/plain" target="_blank">
-                            <span class="email__modal-text bold">
-                                Прізвище:
-                            </span>
-                            </br>
-
-                            <input type="text" name="entry.935987859"></br>
-
-                            <span class="email__modal-text bold">
-                                Ім'я:
-                            </span>
-                            </br>
-                            <input type="text" name="entry.1131368883">
-                            </br>
-
-                            <span class="email__modal-text bold">
-                                Телефон:
-                            </span>
-                            </br>
-                            <input type="tel" name="entry.1263995965" maxlength="13" pattern="+38[0-9]{3}-[0-9]{7}" placeholder="+380">
-                            </br>
-
-                            <span class="email__modal-text bold">
-                                E-mail:
-                            </span>
-                            </br>
-
-                            <input type="email" name="entry.2007694099">
-                            </br>
-                            </br>
-                            <span class="email__modal-text bold">
-                                Вибір заїзду:
-                            </span></br>
-
-                            <div class="pick-race__wrapper">
-                                <input type="checkbox" name="race1" value="1">
-                                <span class="email__modal-text"> 1. 22 червня – 30 червня; 16-26р.</span>
-                                </br>
-
-                                <input type="checkbox" name="race2" value="2">
-                                <span class="email__modal-text"> 2. 30 червня – 08 липня; 16-26р.
-                                </span></br>
-
-                                <input type="checkbox" name="race3" value="3">
-                                <span class="email__modal-text"> 3. 08 липня – 16 липня; 16-26р.
-                                </span></br>
-
-                                <input type="checkbox" name="race4" value="4">
-                                <span class="email__modal-text"> 4. 16 липня – 24 липня; необмежений вік; програма не є обов'язковою
-                                </span></br>
-
-                                <input type="checkbox" name="race5" value="5">
-                                <span class="email__modal-text"> 5. 24 липня – 1 серпня; 16-26р.
-                                </span>
-                                </br>
-                            </div>
-                            </br>
-                            <input type="submit" value="Далі" class="email__submit" id="formSubmit">
-                        </form>
                     </div>
                 </div>
             </div>
