--- a/index.html
+++ b/index.html
@@ -231,86 +231,89 @@
     <a id="rozporyadok_anchor"></a>
     <div id="rozporyadok">
 			<div class="col-sm-12">
-				<div class="brd">
-					<h2 class="metro">Орієнтовний розпорядок дня</h2>
-					<div class="col-sm-5 col-sm-offset-1">
-            <p><font color="gold">07.45</font> - Підйом</p>
-						<p><font color="gold">08.00</font> - Зарядка</p>
-						<p><font color="gold">08.15</font> - Сніданок</p>
-						<p><font color="gold">09.30</font> - Активності для тіла</p>
-						<p><font color="gold">11.00</font> - Активності для духу</p>
-						<p><font color="gold">12.00</font> - Активності для розуму</p>
-						<p><font color="gold">13.30</font> - Обід та вільний час</p>
-					</div>
-          <div class="col-sm-6">
-						<p><font color="gold">15.00</font> - Активності для саморозвитку</p>
-						<p><font color="gold">16.00</font> - Командні ігри, турніри, квести</p>
-						<p><font color="gold">18.30</font> - Активності для душі</p>
-						<p><font color="gold">19.30</font> - Вечеря</p>
-						<p><font color="gold">20.45</font> - Вечірня програма</p>
-						<p><font color="gold">22.30</font> - Відпочинкова зона</p>
-						<p><font color="gold">00.00</font> - Відбій</p>
-					</div>
-        </div>
+        <div class="square1"></div>
+        <div class="square2"></div>
+  				<div class="brd">
+  					<h2 class="metro">Орієнтовний розпорядок дня</h2>
+  					<div class="col-sm-5 col-sm-offset-1">
+              <p><font color="gold">07.45</font> - Підйом</p>
+  						<p><font color="gold">08.00</font> - Зарядка</p>
+  						<p><font color="gold">08.15</font> - Сніданок</p>
+  						<p><font color="gold">09.30</font> - Активності для тіла</p>
+  						<p><font color="gold">11.00</font> - Активності для духу</p>
+  						<p><font color="gold">12.00</font> - Активності для розуму</p>
+  						<p><font color="gold">13.30</font> - Обід та вільний час</p>
+  					</div>
+            <div class="col-sm-6">
+  						<p><font color="gold">15.00</font> - Активності для саморозвитку</p>
+  						<p><font color="gold">16.00</font> - Командні ігри, турніри, квести</p>
+  						<p><font color="gold">18.30</font> - Активності для душі</p>
+  						<p><font color="gold">19.30</font> - Вечеря</p>
+  						<p><font color="gold">20.45</font> - Вечірня програма</p>
+  						<p><font color="gold">22.30</font> - Відпочинкова зона</p>
+  						<p><font color="gold">00.00</font> - Відбій</p>
+  					</div>
+          </div>
 			</div>
     </div>
     <!-- Actiity -->
     <a id="aktyvnosti_anchor"></a>
 		<div id="aktyvnosti">
-      <div class='dotted'>
           <div class="row centered">
   						<h1 style="color: white; font-weight: bold; letter-spacing: 3px;">АКТИВНОСТІ</h1>
-  						<h2 class="aktyv-underline">ДЛЯ ТІЛА</h2>
-  							<div class="col-xs-12 col-sm-12">
-  								<div class="circle col-xs-12 col-sm-2 col-sm-offset-1">
-  									<img src="img\ico_round_vol.png" alt="футбол" class="image-tam">
-  									<span class="text_center pos_vol">ВОЛЕЙБОЛ</span>
-  								</div>
-  								<div class="circle col-xs-12 col-sm-2">
-  									<img src="img\ico_round_foot.png" alt="футбол" class="image-tam">
-  									<span class="text_center pos_foot">ФУТБОЛ</span>
-  								</div>
-  								<div class="circle col-xs-12 col-sm-2">
-  									<img src="img\ico_round_ten.png" alt="НАСТІЛЬНИЙ ТЕНІС" class="image-tam">
-  									<span class="text_center pos_ten">НАСТІЛЬНИЙ ТЕНІС</span>
-  								</div>
-  								<div class="circle col-xs-12 col-sm-2">
-  									<img src="img\ico_round_badm.png" alt="БАДМІНТОН" class="image-tam">
-  									<span class="text_center pos_badm">БАДМІНТОН</span>
-  								</div>
-  								<div class="circle col-xs-12 col-sm-2 ">
-  									<img src="img\ico_round_polo.png" alt="ВОДНЕ ПОЛО" class="image-tam">
-  									<span class="text_center pos_polo">ВОДНЕ ПОЛО</span>
-  								</div>
-  					 	</div>
+      					<h2 сlass="activ">ДЛЯ ТІЛА</h2>
+                  <div class="tilo"></div>
+      							<div class="col-xs-12 col-sm-12">
+      								<div class="circle col-xs-12 col-sm-2 col-sm-offset-1">
+      									<img src="img\ico_round_vol.png" alt="футбол" class="image-tam">
+      									<span class="text_center pos_vol">ВОЛЕЙБОЛ</span>
+      								</div>
+      								<div class="circle col-xs-12 col-sm-2">
+      									<img src="img\ico_round_foot.png" alt="футбол" class="image-tam">
+      									<span class="text_center pos_foot">ФУТБОЛ</span>
+      								</div>
+      								<div class="circle col-xs-12 col-sm-2">
+      									<img src="img\ico_round_ten.png" alt="НАСТІЛЬНИЙ ТЕНІС" class="image-tam">
+      									<span class="text_center pos_ten">НАСТІЛЬНИЙ ТЕНІС</span>
+      								</div>
+      								<div class="circle col-xs-12 col-sm-2">
+      									<img src="img\ico_round_badm.png" alt="БАДМІНТОН" class="image-tam">
+      									<span class="text_center pos_badm">БАДМІНТОН</span>
+      								</div>
+      								<div class="circle col-xs-12 col-sm-2 ">
+      									<img src="img\ico_round_polo.png" alt="ВОДНЕ ПОЛО" class="image-tam">
+      									<span class="text_center pos_polo">ВОДНЕ ПОЛО</span>
+      								</div>
+  					 	     </div>
 					</div>
 					<div class="row centered">
 						<h2 class="aktyv-underline ringo">ДЛЯ ДУХУ</h2>
-						<div class="col-sm-12 rin">
-							<div class="circle col-xs-12 col-sm-2 col-sm-offset-2">
-								<img src="img\ico_round_pr.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
-								<span class="text_center pos pr">РІЗНІ ВИДИ МОЛИТОВ</span>
-							</div>
-							<div class="circle col-xs-12 col-sm-2 ">
-								<img src="img\ico_round_hb.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
-								<span class="text_center pos hb">РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ</span>
-							</div>
-							<div class="circle col-xs-12 col-sm-2">
-								<img src="img\1.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
-								<span class="text_center pos ch">БЕСІДИ ПРО ХРИСТИЯНСТВО</span>
-							</div>
-							<div class="circle col-xs-12 col-sm-2 ">
-								<img src="img\ico_round_qu.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
-								<span class="text_center pos qu">ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ</span>
-							</div>
-					  </div>
+              <div class="duh"></div>
+    						<div class="col-sm-12 rin">
+    							<div class="circle col-xs-12 col-sm-2 col-sm-offset-2">
+    								<img src="img\ico_round_pr.png" alt="РІЗНІ ВИДИ МОЛИТОВ" class="image-tam">
+    								<span class="text_center pos pr">РІЗНІ ВИДИ МОЛИТОВ</span>
+    							</div>
+    							<div class="circle col-xs-12 col-sm-2 ">
+    								<img src="img\ico_round_hb.png" alt="РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ" class="image-tam">
+    								<span class="text_center pos hb">РОЗДУМИ НАД СВЯТИМ ПИСЬМОМ</span>
+    							</div>
+    							<div class="circle col-xs-12 col-sm-2">
+    								<img src="img\1.png" alt="БЕСІДИ ПРО ХРИСТИЯНСТВО" class="image-tam">
+    								<span class="text_center pos ch">БЕСІДИ ПРО ХРИСТИЯНСТВО</span>
+    							</div>
+    							<div class="circle col-xs-12 col-sm-2 ">
+    								<img src="img\ico_round_qu.png" alt="ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ" class="image-tam">
+    								<span class="text_center pos qu">ДУХОВНІ ПИТАННЯ-ВІДПОВІДІ</span>
+    							</div>
+    					  </div>
 					</div>
         </div>
-      </div>
 					<div class="delta">
 						<div class="row centered">
               <div class="dottedin">
 			  			  <h2 class="aktyv-underline ringo doton">ДЛЯ РОЗУМУ</h2>
+                  <div class="rozum"></div>
               </div>
 								<div class="col-xs-12 col-sm-12 rin">
 									<div class="circle col-sm-2 col-sm-offset-2">
@@ -333,6 +336,7 @@
 							</div>
 						<div class="row centered">
 				  		  <h2 class="aktyv-underline ringo">ДЛЯ САМОРОЗВИТКУ</h2>
+                <div class="samorozvytok"></div>
 						  	<div class="col-xs-12 col-sm-12 rin">
 								 	<div class="circle col-xs-12 col-sm-2 col-sm-offset-2">
 										<img src="img\ico_round_gi.png" alt="УРОКИ ГРИ НА ГІТАРІ" class="image-tam">
@@ -340,7 +344,7 @@
 									</div>
 									<div class="circle col-xs-12 col-sm-2 ">
 										<img src="img\ico_round_re.png" alt="КУРС ПО СТОСУНКАХ" class="image-tam">
-										<span class="text_center posreg re">КУРС ПРО СТОСУНКАХ</span>
+										<span class="text_center posreg re">КУРС ПРО СТОСУНКИ</span>
 									</div>
 									<div class="circle col-xs-12 col-sm-2">
 										<img src="img\enсlab.png" alt="ENGLISH CLUB" class="image-tam">
