--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <div class="modal-content">
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                                <h4 class="modal-title">Alive Camp</h4>
+                                <h4 class="modal-title">ALIVE CAMP</h4>
                             </div>
                             <div class="modal-body">
                                 <iframe id="cartoonVideo" width="560" height="315" src="//www.youtube.com/embed/w14t6go9mx8"   frameborder="0" allowfullscreen></iframe>
