--- a/payment.html
+++ b/payment.html
@@ -34,7 +34,7 @@
                    
                     type: 'POST',
                    dataType: "xml",
-                    complete: function() { location.reload(); },
+                    complete: function() {  },
                 });
 
             });
